# GeoParquetAndSedona

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/geo_parquet/: fr_commune_code_postal_centroid_geopoint.parquet
data/geojson/: multi_lines.json
data/parquet/airports/: part-00000-b950f0ae-c815-4a20-b44d-5556dcd46339-c000.snappy.parquet
data/parquet/fr_commune_code_postal/: base-officielle-codes-postaux.parquet  fr_commune_code_postal_centroid_double.parquet
docs/: 01.Install_sedona_with_pyspark.md
notebooks/: 01.Sedona_QuickStart.ipynb  02.sedona_read_various_data_format.ipynb  03.sedona_read_osm_pbf.ipynb  04.Use_french_raod_network.ipynb  05.Test_ORSM_API.ipynb
notebooks/G4Health/: Check_routes.ipynb  French_commune_distance_with_postal_code.ipynb  French_extra_routes_with_spec_commune_.ipynb
notebooks/basic_tutorial/: 00.Read_geoparquet_from_s3.ipynb  01.Sedona_QuickStart.ipynb  02.sedona_read_various_data_format.ipynb  03.Real_world_problems.ipynb  03.Spatial_query_in_sedona.ipynb  03.france_commune.ipynb  05.sedona_read_osm_pbf.ipynb  06.Real_world_problems.ipynb  07.Create_UDF_in_sedona.ipynb
notebooks/french_immo/: analyze_fr_immo.ipynb
notebooks/tmp/: Build_road_network.ipynb  tmp.py
scripts/: tmp.py
scripts/french_commune_distance/: README.md  calculate_distance_duration.py  calculate_distance_duration_for_spec_commune.py  demo.ipynb  read_code.py  split_code_into_files.py
